--- a/index.html
+++ b/index.html
@@ -1,1 +1,78 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Equipe Alura Start</title>
+<link rel="stylesheet" href="style.css">
+<link rel="preconnect" href="https://fonts.googleapis.com"&gt;
+<link rel="preconnect" href="https://fonts.gstatic.com&quot; crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap&quot; rel="stylesheet">
+</head>
+<body>
+<header class="cabecalho">
+<img class="cabecalho-imagem" src="logo.png" alt="logo da alura start">
+<ul class="cabecalho-lista">
+<li class="cabecalho-lista-item">Escola</li>
+<li class="cabecalho-lista-item">Estudante</li>a
+</ul>
+</header>
+
+
+<section class="escola">
+<div class="escola-div-conteudo">
+   
+    <h2 class="escola-titulo">
+    Sobre a escola    
+    </h2>
+
+    <p class="escola-texto-um">
+        O colégio estadual cívico-militar Jardim Zeballos foi fundado há mais de 50 anos
+    </p>
+
+    <p class="escola-texto-dois">
+        A turma do 2B é a melhor turma do colégio!
+    </p>
+
+</div>
+
+<img src="turma.png" class="turma" alt="imagem que representa a turma do 2B do colégio">
+</section>
+
+
+<section class="estudante">
+
+    <h2 class="estudante-titulo">
+        Quem são nossos estudantes?
+    </h2>
+
+    <div class="estudante-div">
+        <img src="amanda.png" class="estudante-imagem" alt="imagem da aluna Amanda">
+        <h3 class="estudante-nome"> Amanda </h3>
+    </div>
+
+    <div class="estudante-div">
+        <img src="rafael.png" class="estudante-imagem" alt="imagem do aluno Rafael">
+        <h3 class="estudante-nome"> Rafael </h3>
+    </div>
+
+    <div class="estudante-div">
+        <img src="kaue.png" class="estudante-imagem" alt="imagem do aluno Kaue">
+        <h3 class="estudante-nome"> Kauê </h3>
+    </div>
+
+    <div class="estudante-div">
+        <img src="aline.png" class="estudante-imagem" alt="imagem da aluna Aline">
+        <h3 class="estudante-nome">Aline</h3>
+    </div>
+
+    <div class="estudante-div">
+        <img src="orlei.png" class="estudante-imagem" alt="imagem do professor Orlei">
+        <h3 class="estudante-nome">Prof. Orlei </h3>
+    </div>
+
+</section>
+
+</section>
